dc2/preview/custom-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
spec:
  template:
    spec:
      containers:
        - name: hello-kubernetes
