dc2/preview/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello-preview-playground.sap.com
      http:
        paths:
          - backend:
              serviceName: hello-kubernetes
              servicePort: 80
            path: /
